--- a/note_taking_frontend/package.json
+++ b/note_taking_frontend/package.json
@@ -19,12 +19,12 @@
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@vitejs/plugin-react": "4.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^4.4.9"
+    "vite": "4.4.9"
   },
   "engines": {
     "node": ">=18.0.0 <20"
