--- a/note_taking_frontend/.gitignore
+++ b/note_taking_frontend/.gitignore
@@ -1,8 +1,15 @@
-# Built folder for production
-dist/
-# Vite/Node environment files
-.env*
-# Dependency folders (if any)
+# Editor/IDE and OS files
+.DS_Store
 node_modules/
-# VSCode settings (if applicable)
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Production output
+dist/
+app.wgt
+
+# Environment variables
+.env
+.env.*
 .vscode/
